gpu/config: disable partial swaps on Mesa Gallium drivers too.

Previously detection of Mesa drivers was done by matching "Mesa" in
GL_RENDERER but Gallium-based drivers don't have "Mesa" there. Also
search for "Mesa" in GL_VERSION: all Mesa driver reported in the OpenGL
hardware database have it in GL_VERSION.

BUG=649296
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_optional_gpu_tests_rel;master.tryserver.chromium.mac:mac_optional_gpu_tests_rel;master.tryserver.chromium.win:win_optional_gpu_tests_rel

Review-Url: https://codereview.chromium.org/2373513002
Cr-Commit-Position: refs/heads/master@{#421021}

Former-commit-id: d88c53039fadac470fe52e938588a259e7dcbacd